@@ -6,7 +6,6 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -25,8 +24,12 @@ public class GrantedAuthoritiesKeyCloakMapper implements GrantedAuthoritiesMappe
 
     private static final Logger log = LoggerFactory.getLogger(GrantedAuthoritiesKeyCloakMapper.class);
 
-    @Value("${spring.security.oauth2.client.registration.keycloak.client-id}")
-    private String rhDemoClientID;
+    private final String rhDemoClientID;
+
+    public GrantedAuthoritiesKeyCloakMapper(
+            @Value("${spring.security.oauth2.client.registration.keycloak.client-id}") String rhDemoClientID) {
+        this.rhDemoClientID = rhDemoClientID;
+    }
 
     @Override
     public Collection<? extends GrantedAuthority> mapAuthorities(Collection<? extends GrantedAuthority> authorities) {
@@ -75,9 +78,9 @@ public class GrantedAuthoritiesKeyCloakMapper implements GrantedAuthoritiesMappe
         List<String> roles = (List<String>) clientID.get("roles");
         if (roles != null) {
             grantedAuths = roles.stream()
-                .filter(e -> e.startsWith("ROLE_"))
-                .map(SimpleGrantedAuthority::new)
-                .collect(Collectors.toList());
+                .filter(e -> e != null && e.startsWith("ROLE_"))
+                .<GrantedAuthority>map(SimpleGrantedAuthority::new)
+                .toList();
         }
         return grantedAuths;
     }
